package at.htl.entities;public class LineItem {
}
