@startuml

left to right direction

class Customer
class Invoice
class LineItem
note bottom: Man könnte hier\nev. eine Reihenfolge\neinbauen
class Product
note bottom: Ein Produkt kann auch \neine Tätigkeit sein\ndie Tasks wären also ein Produkt
class Gardener


Customer <-- Invoice
Invoice <-- LineItem
LineItem --> Product
LineItem -left-> Gardener

@enduml